--- a/ESP32_TEST/platformio.ini
+++ b/ESP32_TEST/platformio.ini
@@ -12,7 +12,4 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
-lib_deps = 
-	miguelbalboa/MFRC522@^1.4.10
-	fastled/FastLED@^3.6.0
-	adafruit/Adafruit NeoPixel@^1.11.0
+lib_deps = miguelbalboa/MFRC522@^1.4.10
